renamed the app

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 This application allows you to hook up an RSS feed into a grove.io channel.
 
+It is deployed at 
+
 TODO:
 * CSS
 * Use Heroku's provisioning of Superfeedr's addon
